[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Themes/small_pixel.ttf" type="FontFile" id=1]
[ext_resource path="res://Assets/background.png" type="Texture2D" id=2]
[ext_resource path="res://Assets/Themes/Menu.tres" type="Theme" id=3]
[ext_resource path="res://Menus/LevelSelectMenu.gd" type="Script" id=4]
[ext_resource path="res://Assets/Arrow.png" type="Texture2D" id=5]

[sub_resource type="FontFile" id=1]
size = 14
font_data = ExtResource( 1 )

[node name="LevelSelectMenu" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" type="Sprite2D" parent="."]
position = Vector2( 32, 32 )
texture = ExtResource( 2 )

[node name="Buttons" type="Node2D" parent="."]

[node name="ScrollContainer" type="ScrollContainer" parent="Buttons"]
offset_top = 23.0
offset_right = 65.0
offset_bottom = 55.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Buttons/ScrollContainer"]
offset_right = 53.0
offset_bottom = 86.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Level1" type="Button" parent="Buttons/ScrollContainer/VBoxContainer"]
offset_right = 53.0
offset_bottom = 14.0
theme = ExtResource( 3 )
text = "Level 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level2" type="Button" parent="Buttons/ScrollContainer/VBoxContainer"]
offset_top = 18.0
offset_right = 53.0
offset_bottom = 32.0
theme = ExtResource( 3 )
text = "Level 2"

[node name="Level3" type="Button" parent="Buttons/ScrollContainer/VBoxContainer"]
offset_top = 36.0
offset_right = 53.0
offset_bottom = 50.0
theme = ExtResource( 3 )
text = "Help"

[node name="Level4" type="Button" parent="Buttons/ScrollContainer/VBoxContainer"]
offset_top = 54.0
offset_right = 53.0
offset_bottom = 68.0
theme = ExtResource( 3 )
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level5" type="Button" parent="Buttons/ScrollContainer/VBoxContainer"]
offset_top = 72.0
offset_right = 53.0
offset_bottom = 86.0
theme = ExtResource( 3 )
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Area2D" parent="Buttons"]

[node name="Sprite2D" type="Sprite2D" parent="Buttons/Back"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 5, 60 )
texture = ExtResource( 5 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Buttons/Back"]
visible = false
polygon = PackedVector2Array( 1, 59, 2, 59, 2, 58, 3, 58, 3, 57, 4, 57, 4, 56, 5, 56, 5, 58, 9, 58, 9, 62, 5, 62, 5, 64, 4, 64, 4, 63, 3, 63, 3, 62, 2, 62, 2, 61, 1, 61 )

[node name="Label" type="Label" parent="."]
offset_left = -1.0
offset_top = 4.0
offset_right = 68.0
offset_bottom = 20.0
theme = ExtResource( 3 )
theme_override_fonts/font = SubResource( 1 )
text = "Escolhe"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
